--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,27 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&display=swap" rel="stylesheet">
+    <title>Task Planner</title>
 </head>
 <body>
-    <h1>Today's Tasks</h1>
+    <section id="mainContent">
+        <h1>Easy Task Planner!</h1>
+        <section id="taskAdd">
+    <h2>Add a Task:</h2>
+    <form action="/addTask" method='POST'>
+        <input id="inputText" type="text" placeholder="Task" name="taskName">
+        <input id="inputRequired" type="text" placeholder="Due Date" name="dueDate">
+        <input id="sendBtn" type="submit" value="Add!">
+    </form>
+</section>
+    <section id="todayTasks">
+    <h2>Today's Tasks:</h2>
     <ul class="tasks">
         <% for(let i=0; i < info.length; i++) {%>
             <li class="task">
-                <span><%= info[i].taskName %></span>
-                <span><%= info[i].dueDate %></span>
-                <span class="del">DELETE</span>
+                <span id="taskBold"><%= info[i].taskName %></span><br>
+                <span>Due: </span><span><%= info[i].dueDate %></span>
+                <span class="del">&nbsp;&nbsp;&nbsp;<i class="fa fa-minus-circle"></i></span>
             </li>
         <% } %>
     </ul>
-
-    <h2>Add a Task:</h2>
-        <form action="/addTask" method='POST'>
-            <input type="text" placeholder="Task" name="taskName">
-            <input type="text" placeholder="Due Date" name="dueDate">
-            <input type="submit">
-        </form>
-
+</section>
+    </section>
         <script src="main.js"></script>
 </body>
 </html>
