--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section id="mainContent">
-        <h1>Easy Task Planner!</h1>
+        <h1>The Easy Task Planner!</h1>
         <section id="taskAdd">
     <h2>Add a Task:</h2>
     <form action="/addTask" method='POST'>
