--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         <h1>The Easy Task Planner!</h1>
         <section id="taskAdd">
     <h2>Add a Task:</h2>
-    <form action="/addTask" method='POST'>
+    <form action="/addTask" method="POST">
         <input id="inputText" type="text" placeholder="Task" name="taskName">
         <input id="inputRequired" type="text" placeholder="Due Date" name="dueDate">
         <input id="sendBtn" type="submit" value="Add!">
@@ -26,9 +26,16 @@
     <ul class="tasks">
         <% for(let i=0; i < info.length; i++) {%>
             <li class="task">
-                <span id="taskBold"><%= info[i].taskName %></span><br>
-                <span>Due: </span><span><%= info[i].dueDate %></span>
-                <span class="del">&nbsp;&nbsp;&nbsp;<i class="fa fa-minus-circle"></i></span>
+                <% if(info[i].completed === true) {%>
+                    <span id="taskBold" class="done"><%= info[i].taskName %></span><br>
+                    <span class="done">Due: </span><span class="done"><%= info[i].dueDate %></span>
+                <% }else{ %>
+                    <span id="taskBold"><%= info[i].taskName %></span><br>
+                    <span>Due: </span><span><%= info[i].dueDate %></span>
+                <% } %>
+                <span class="upDoot">&nbsp;&nbsp;<i class="fa fa-arrow-circle-up"></i></span>
+                <span class="completed">&nbsp;<i class="fa fa-check-circle"></i></span>
+                <span class="del">&nbsp;<i class="fa fa-minus-circle"></i></span>
             </li>
         <% } %>
     </ul>
