Updated functionality, cleaned up some code.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
                         <span id="taskBold"><%= info[i].taskName %></span><br>
                         <span>Due: </span><span><%= info[i].dueDate %></span>
                     <% } %>
-                    <span class="upDoot">&nbsp;&nbsp;<i class="fa fa-arrow-circle-up"></i></span>
+                    <!-- <span class="upDoot">&nbsp;&nbsp;<i class="fa fa-arrow-circle-up"></i></span> -->
                     <span class="completed">&nbsp;<i class="fa fa-check-circle"></i></span>
                     <span class="del">&nbsp;<i class="fa fa-minus-circle"></i></span>
                 </li>
